--- a/views/widget/new_footer/yimin_footer.html
+++ b/views/widget/new_footer/yimin_footer.html
@@ -18,7 +18,7 @@
             <div class="sitemap sitemap02">
                 <h2>专家团队</h2>
                 <ul>
-                    <li style="width: 312px;"><a target="_blank"  rel="nofollow"   href="">海外律师团队</a></li>
+                    <li style="width: 312px;"><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('lawyer')}}">海外律师团队</a></li>
                 </ul>
             </div>
 
