--- a/views/widget/new_footer/common_footer.html
+++ b/views/widget/new_footer/common_footer.html
@@ -45,7 +45,7 @@
           <h2>专家团队</h2>
           <ul>
             <li style="width: 312px;"><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('canzan') }}">25位留学消费教育学校指导专家</a></li>
-            <li style="width: 312px;"><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('canzan') }}">海外律师团队</a></li>
+            <li style="width: 312px;"><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('lawyer') }}">海外律师团队</a></li>
           </ul>
         </div>
 
