--- a/views/widget/top/top.html
+++ b/views/widget/top/top.html
@@ -250,9 +250,9 @@ input[type="checkbox"] {
     if (login_nickname == null) {
       var val = '<div class="dui-layout-lg top-con">'+
                 '<div class="top-con-right">'+
-                '<span><a target="_blank" onclick="getregister()" class="dui-text-warning-ss" rel="nofollow">注册</a></span>'+
+                '<span><a target="_blank" onclick="getloginUser()" class="dui-text-warning-ss" rel="nofollow">注册</a></span>'+
                 '<span class="bor"></span>'+
-                '<span ><a href="javascript:void(0);" style="background: #fff;" onclick="getlogin()" class="dui-text-warning-ss" rel="nofollow">登录</a></span>'+
+                '<span ><a href="javascript:void(0);" style="background: #fff;" onclick="getloginUser()" class="dui-text-warning-ss" rel="nofollow">登录</a></span>'+
                 '</div>'+
                 '</div>'
       $(".top").append(val);
