--- a/views/index.html
+++ b/views/index.html
@@ -123,8 +123,8 @@
   </div>
 </div>
 {% include "widget/top/top.html" %}
-{% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
-{{ new_nav_first.new_nav_first(tdk,helper) }}
+{% import "widget/new_nav_first/nav_login.html" as nav_login %}
+{{ nav_login.nav_login(tdk,helper) }}
 <div class="main" style="width: 1200px;margin: 0 auto;">
   <!--轮播图-->
   <div class="lunbo">
