--- a/views/so_article.html
+++ b/views/so_article.html
@@ -212,7 +212,7 @@
                 <div class="search-btn" id="searchBtn-page" style="cursor: pointer;"><i class="city-icon iconfont">&#xe60c;</i></div>
             </div>
             <div class="result-bar">
-                搜索<span id="result-keyword">{{keyword}}</span>共搜索到<span id="result-num">{{article_list.total if article_list.total else 0}}</span>个结果
+                搜索<span id="result-keyword">{{keyword | ellipsis(45)}}</span>共搜索到<span id="result-num">{{article_list.total if article_list.total else 0}}</span>个结果
             </div>
             {% if article_list.total == 0 or article_list.total == null %}
             <!--没有搜索到数据-->
