渲染首页数据

--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -12,9 +12,10 @@
 .triangle{position:absolute;top:0;right:0;width:0;height:0;border-top:20px solid #c13232;border-left:20px solid transparent}
 .gw-topitems .gw-people{margin-left:20px}
 .gw-topitems .gw-news{ margin-right: 16px;}
-.gw-items{ width: 1200px;display: inline-block; }
+.gw-items{ width: 1200px;display: inline-block;}
 .gw-items li:nth-child(3n){margin-right:0}
 .gw-people{position:relative;float:left;margin-left:20px}
+.lx-groupitems .gw-people a{background-position: -15px -18px\0 !important;}
 .gw-people img{width:51px;height:51px;-webkit-border-radius:50%;border-radius:50%}
 .gw-people span{color:#333;font-size:14px;margin-top: 15px;display: inline-block;margin-left: 10px;}
 .gw-people .pepple-icon > i{ vertical-align:middle; display:inline-block;width: 20px;height: 20px; background:url(../assets/img/1v.png) no-repeat;background-position:right center}
