--- a/views/widget/liuxue_item/yimin_item.html
+++ b/views/widget/liuxue_item/yimin_item.html
@@ -3,9 +3,9 @@
 .lx-head{margin-bottom:20px;padding-bottom:10px;height:27px;border-bottom:solid 1px #dcdcdc}
 .lx-head h1{float:left;margin-right:70px;color:#333;font-size:22px}
 .lx-tabitems{float:left;margin-top:5px}
-.lx-tabitems li{position:relative;float:left;width:51px;color:#666;margin-right:10px;text-align:center;font-size:14px;cursor:pointer}
+.lx-tabitems li{position:relative;float:left;color:#666;margin-right:18px;text-align:center;font-size:14px;cursor:pointer}
 .lx-tabitems li.active{color:#c13232}
-.lx-tabitems li.active em{position:absolute;bottom:-14px;left:0;display:block;width:51px;height:2px;background:#c13232}
+.lx-tabitems li.active em{position:absolute;bottom:-14px;left:0;display:block;width:100%;height:2px;background:#c13232}
 .gw-items li{float:left;margin-right:20px;margin-bottom:10px;padding-bottom:14px;width:385px;*width:380px;width:380px\0;border-bottom:solid 1px #dcdcdc}
 .gw-topitems{position:relative;overflow:hidden;margin-bottom:20px;box-shadow:0 3px 5px #e2e5e6;background:#f1f4f6;}
 .gw-topitems li{margin-right:0;margin-bottom:0;padding-top:10px;width:400px;border-bottom:none;background-color:#f1f4f6;}
@@ -15,6 +15,7 @@
 .gw-items{ width: 1200px;display: inline-block; }
 .gw-items li:nth-child(3n){margin-right:0}
 .gw-people{position:relative;float:left;margin-left:20px}
+.lx-groupitems .gw-people a{background-position: -18px -18px\0 !important;}
 .gw-people img{width:51px;height:51px;-webkit-border-radius:50%;border-radius:50%}
 .gw-people span{color:#333;font-size:14px;margin-top: 15px;display: inline-block;margin-left: 10px;}
 .gw-people .pepple-icon > i{ vertical-align:middle; display:inline-block;width: 20px;height: 20px; background:url(../assets/img/1v.png) no-repeat;background-position:right center}
@@ -27,6 +28,7 @@
 	width: 51px;
 	border-radius: 50%;
 	-webkit-border-radius:50%;
+	-ms-border-radius:50%;
 }
 #guItems li:nth-child(3) .gw-people{margin-left: 26px;}
 </style>
