--- a/views/widget/new_nav_first/yimin_nav.html
+++ b/views/widget/new_nav_first/yimin_nav.html
@@ -2,7 +2,7 @@
 <div class="new_nav_first_white">
     <div class="new_nav_first clearfix">
         <div class="new-logo-left">
-            <a  target="_blank" href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}"><img src="{{helper.cdnhost}}/assets/img/yimin_logo_black.png" alt="金吉列移民官网"/></a>
+            <a  target="_blank" href="{{ helper.urlgen('yimin') }}"><img src="{{helper.cdnhost}}/assets/img/yimin_logo_black.png" alt="金吉列移民官网"/></a>
         </div>
         <ul class="page-type">
             <li class="active"><a href="{{ helper.urlgen('yimin') }}">移民</a></li>
