--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -264,7 +264,7 @@
         }
         ] %}
         {% for item in cityList %}
-        <div class="branch_company_text_tilte">
+        <div class="branch_company_text_tilte" style="cursor: default">
           {{item.companyName}}
         </div>
         {% endfor %}
