--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -17,7 +17,10 @@
 .gw-people{position:relative;float:left;margin-left:20px}
 .lx-groupitems .gw-people a{
 	background-position:0 0;
-	background-position:-11px -13px\9;
+	background-position:-18px -18px\0;
+}
+:root .lx-groupitems .gw-people a{
+	background-position:0 0\0;
 }
 .gw-people img{width:51px;height:51px;-webkit-border-radius:50%;border-radius:50%}
 .gw-people span{color:#333;font-size:14px;margin-top: 15px;display: inline-block;margin-left: 10px;}
