修改   标题的nofollw

--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -18,11 +18,11 @@
   <div class="homepage-title">
     <p>
     {% if item.type == 1 %}
-    <a target="_blank" href="{{helper.urlgen('case',item.id | string)}}" class="dui-text-warning" rel="nofollow">
+    <a target="_blank" href="{{helper.urlgen('case',item.id | string)}}" class="dui-text-warning">
       {{item.title}}</a><div>{{item.tag_list}}</div>
 
     {% else %}
-    <a target="_blank" href="{{helper.urlgen('article',item.id | string)}}" class="dui-text-warning" rel="nofollow">
+    <a target="_blank" href="{{helper.urlgen('article',item.id | string)}}" class="dui-text-warning">
       {{item.title}}</a><div>{{item.tag_list}}</div>
     {% endif %}
     </p>
