--- a/views/login/forget.html
+++ b/views/login/forget.html
@@ -2,7 +2,7 @@
 <html>
 {% include "header_new.html" %}
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/bootstrap.min.css?v=3.3.6">
+  <!--<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/bootstrap.min.css?v=3.3.6">-->
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/style.css?v=4.1.0">
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/custom.css">
 
