--- a/views/login/binding.html
+++ b/views/login/binding.html
@@ -33,7 +33,7 @@
 <div class="register_overseas clearfix">
   <div class="register_content">
     <div class="register_nei login_nei clearfix">
-      <div class="register_nei_title"><em>绑定手机号</em><i>您已经成功关联{{oauth_data.title}}账号，用户名，请输入手机号完成<a target="_blank"  target="_blank"  href="/login">绑定</a></i></div>
+      <div class="register_nei_title"><em>绑定手机号</em><i>您已经成功关联{{oauth_data.title}}账号，用户名，请输入手机号完成<a target="_blank"  target="_blank"  href="/loginUser">绑定</a></i></div>
 
       <div class="register_nei_content">
         <form class="m-t register_nei_form" role="form" style="margin-top: 100px">
