--- a/views/about/activity.html
+++ b/views/about/activity.html
@@ -27,7 +27,7 @@
     background: #f1f4f6;
     font-size: 16px;
     line-height: 40px;
-    padding:0 20px;
+    padding:0 20px 0 14px;
   }
   .new-activity-item-title .city-name{
     color:#c13232;
@@ -77,6 +77,43 @@
     text-align: center;
     margin-bottom: 0;
   }
+  .new-activity-qita h2{
+    font-size: 16px;
+    color:#333333;
+    height: 30px;
+    line-height: 30px;
+    margin-bottom: 20px;
+    padding:0 20px 0 14px;
+  }
+  .new-activity-qita h2 span{
+    color:#c13232;
+
+  }
+  .new-activity-qita h2 a{
+    float:right;
+    display: inline-block;
+    width: 115px;
+    height: 30px;
+    background: #c13232;
+    color:#ffffff;
+    text-align: center;
+    line-height: 30px;;
+    font-size: 14px;
+  }
+  .new-activity-qita h2 i{
+    display: inline-block;
+    width: 42px;
+    height: 20px;
+    margin-top:5px;
+    background: #f9f6f1;;
+    color:#c13232;
+    font-size: 12px;
+    line-height: 20px;
+    text-align: center;
+    border-radius: 5px;
+    margin-left: 10px;
+  }
+
 </style>
 <script>
   var AD_PAGE_NAME = "ACTIVITY";
@@ -100,62 +137,69 @@
     </div>
     <div class="new-activity-content">
       <div class="clearfix">
+        {% for item in activitylist.list %}
+          {% if loop.index%2==1 %}
         <div class="new-activity-item">
-          <h2 class="new-activity-item-title"><span class="city-name">【北京】</span>美国活动美国活动美国活动<span  class="activity-time">2018-03-03</span></h2>
+          <h2 class="new-activity-item-title"><span class="city-name">【{{item.hold_city | getCity}}】</span>{{item.title}}<span  class="activity-time">{{ item.inputtime | getDefaultFormat }}</span></h2>
           <div class="new-activity-item-con">
-            <p class="description"><span>通过名校面试，通过名校面试通过名校面试通过名校面试</span><a href="">【查看详情】</a></p>
+            <p class="description"><span>{{item.description | ellipsis(27)}}</span><a href="">【查看详情】</a></p>
             <ul>
-              <li><i class="iconfont">&#xe6be;</i><span>活动时间：2018-03-12 10:00-19:00 </span></li>
-              <li><i class="iconfont">&#xe63a;</i><span>活动地址：通过名校面试通过名校面试通过名校面试 </span></li>
-              <li><i class="iconfont">&#xe662;</i><span>针对人群：本科 </span></li>
+              <li><i class="iconfont">&#xe6be;</i><span>活动时间：{{item.start_time}}至{{item.end_time}}</span></li>
+              <li><i class="iconfont">&#xe63a;</i><span>活动地址：{{item.address_des | ellipsis(27)}} </span></li>
+              <li><i class="iconfont">&#xe662;</i><span>针对人群：{{item.crowd}} </span></li>
               <li class="booking"><span>立即预约</span></li>
             </ul>
           </div>
         </div>
+        {% else %}
+
         <div class="new-activity-item" style="margin-left: 20px">
-          <h2 class="new-activity-item-title"><span class="city-name">【北京】</span>美国活动美国活动美国活动<span  class="activity-time">2018-03-03</span></h2>
+          <h2 class="new-activity-item-title"><span class="city-name">【{{item.hold_city | getCity}}】</span>{{item.title}}<span  class="activity-time">{{ item.inputtime | getDefaultFormat }}</span></h2>
           <div class="new-activity-item-con">
-            <p class="description"><span>通过名校面试，通过名校面试通过名校面试通过名校面试</span><a href="">【查看详情】</a></p>
+            <p class="description"><span>{{item.description | ellipsis(27)}}</span><a href="">【查看详情】</a></p>
             <ul>
-              <li><i class="iconfont">&#xe6be;</i><span>活动时间：2018-03-12 10:00-19:00 </span></li>
-              <li><i class="iconfont">&#xe63a;</i><span>活动地址：通过名校面试通过名校面试通过名校面试 </span></li>
-              <li><i class="iconfont">&#xe662;</i><span>针对人群：本科 </span></li>
+              <li><i class="iconfont">&#xe6be;</i><span>活动时间：{{item.start_time}}至{{item.end_time}}</span></li>
+              <li><i class="iconfont">&#xe63a;</i><span>活动地址：{{item.address_des | ellipsis(27)}}  </span></li>
+              <li><i class="iconfont">&#xe662;</i><span>针对人群：{{item.crowd}} </span></li>
               <li class="booking"><span>立即预约</span></li>
             </ul>
           </div>
         </div>
+        {% endif %}
+        {% endfor %}
+
       </div>
 
     </div>
-    <div class="new-activity-title">
+    <div class="new-activity-title" style="margin-top: 20px;">
       其他城市讲座信息
     </div>
     <div class="new-activity-content">
       <div class="clearfix">
-        <div class="new-activity-item">
-          <h2 class="new-activity-item-title"><span class="city-name">【北京】</span>美国活动美国活动美国活动<span  class="activity-time">2018-03-03</span></h2>
-          <div class="new-activity-item-con">
-            <p class="description"><span>通过名校面试，通过名校面试通过名校面试通过名校面试</span><a href="">【查看详情】</a></p>
-            <ul>
-              <li><i class="iconfont">&#xe6be;</i><span>活动时间：2018-03-12 10:00-19:00 </span></li>
-              <li><i class="iconfont">&#xe63a;</i><span>活动地址：通过名校面试通过名校面试通过名校面试 </span></li>
-              <li><i class="iconfont">&#xe662;</i><span>针对人群：本科 </span></li>
-              <li class="booking"><span>立即预约</span></li>
-            </ul>
-          </div>
+        {% for item in other_activitylist.list %}
+        {% if loop.index<=6 %}
+        {% if loop.index%2==1 %}
+        <div class="new-activity-item new-activity-qita">
+          <h2><a href="">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | shorten(10)}}】</span>{{item.title | ellipsis(14)}}<i>最新</i></h2>
         </div>
-        <div class="new-activity-item" style="margin-left: 20px">
-          <h2 class="new-activity-item-title"><span class="city-name">【北京】</span>美国活动美国活动美国活动<span  class="activity-time">2018-03-03</span></h2>
-          <div class="new-activity-item-con">
-            <p class="description"><span>通过名校面试，通过名校面试通过名校面试通过名校面试</span><a href="">【查看详情】</a></p>
-            <ul>
-              <li><i class="iconfont">&#xe6be;</i><span>活动时间：2018-03-12 10:00-19:00 </span></li>
-              <li><i class="iconfont">&#xe63a;</i><span>活动地址：通过名校面试通过名校面试通过名校面试 </span></li>
-              <li><i class="iconfont">&#xe662;</i><span>针对人群：本科 </span></li>
-              <li class="booking"><span>立即预约</span></li>
-            </ul>
-          </div>
+        {% else %}
+        <div class="new-activity-item new-activity-qita" style="margin-left: 20px;">
+          <h2><a href="">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | shorten(10)}}】</span>{{item.title | ellipsis(14)}}<i>最新</i></h2>
         </div>
+        {% endif %}
+        {% else %}
+        {% if loop.index%2==1 %}
+        <div class="new-activity-item new-activity-qita">
+          <h2><a href="">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | shorten(10)}}】</span>{{item.title | ellipsis(16)}}</h2>
+        </div>
+        {% else %}
+        <div class="new-activity-item new-activity-qita" style="margin-left: 20px;">
+          <h2><a href="">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time |  shorten(10)}}】</span>{{item.title | ellipsis(16)}}</h2>
+        </div>
+        {% endif %}
+        {% endif %}
+        {% endfor %}
+
       </div>
 
     </div>
