--- a/views/about/activity.html
+++ b/views/about/activity.html
@@ -142,7 +142,7 @@
         <div class="new-activity-item">
           <h2 class="new-activity-item-title"><span class="city-name">【{{item.hold_city | getCity}}】</span>{{item.title}}<span  class="activity-time">{{ item.inputtime | getDefaultFormat }}</span></h2>
           <div class="new-activity-item-con">
-            <p class="description"><span>{{item.description | ellipsis(27)}}</span><a href="">【查看详情】</a></p>
+            <p class="description"><span>{{item.description | ellipsis(27)}}</span><a href="{{helper.urlgen('activity', item.id | string)}}">【查看详情】</a></p>
             <ul>
               <li><i class="iconfont">&#xe6be;</i><span>活动时间：{{item.start_time}}至{{item.end_time}}</span></li>
               <li><i class="iconfont">&#xe63a;</i><span>活动地址：{{item.address_des | ellipsis(27)}} </span></li>
@@ -212,14 +212,12 @@
 {{slide.leyu_slide("AD_COUNSELLER_SEAT10",helper) }}
 </body>
 <script>
-  var AD_PAGE_NAME = "COUNSELLER"; //设置页面对应的名字
+  var AD_PAGE_NAME = "ACTIVITY"; //设置页面对应的名字
 </script>
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js"></script>-->
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_liuxue_search.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/nav_ninth.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/nav_fifth.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js" ></script>
