--- a/views/widget/online_evaluation/quick_application2.html
+++ b/views/widget/online_evaluation/quick_application2.html
@@ -1,17 +1,17 @@
 <div class="quick-application-box" style="border:none" >
   <div class="quick-application-con clearfix" >
     <div class="quick-text1">
-      <label class="title" for="quickName-act" style="font-weight: 400" ><span >*</span>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名&nbsp;&nbsp;&nbsp;&nbsp;：</label>
+      <label class="title" for="quickName-act" style="font-weight: 400" ><span >*</span>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名&nbsp;&nbsp;&nbsp;&nbsp;：</label>
       <input name="quickName" id="quickName-act" type="text" placeholder="输入您的姓名" />
-      <div class="numTip" id="nameNumTip-act" style="margin-left: 132px;"></div>
+      <div class="numTip" id="nameNumTip-act" style="margin-left: 108px;"></div>
     </div>
-    <div class="quick-text1" style="margin-left: 180px;*margin-left: 180px;">
-      <label class="title" for="quickPhone-act"  style="font-weight: 400"><span >*</span>电话：</label>
+    <div class="quick-text1" style="margin-left: 194px;*margin-left: 180px;">
+      <label class="title" for="quickPhone-act"  style="font-weight: 400"><span >*</span>手&nbsp;&nbsp;&nbsp;&nbsp;机&nbsp;&nbsp;：</label>
       <input name="quickPhone" id="quickPhone-act" type="text" placeholder="输入您的手机号" />
-      <div class="numTip" id="phoneNumTip-act"  style="margin-left: 60px;"></div>
+      <div class="numTip" id="phoneNumTip-act"  style="margin-left:88px;"></div>
     </div>
     <div class="quick-text1">
-      <label class="title" for="quickDepartment-act" style="font-weight: 400" ><span >*</span>留 学 意 向 国 家：</label>
+      <label class="title" for="quickDepartment-act" style="font-weight: 400" ><span >*</span>意向国家&nbsp;&nbsp;&nbsp;&nbsp;：</label>
       <select id="quickDepartment-act" name="quickDepartment" style="background:#f3f3f3 url({{helper.cdnhost}}/assets/img/select-down1.png) no-repeat 201px 0" >
         <option value='1'>美国</option>
         <option value='2'>英国</option>
@@ -40,19 +40,20 @@
       </select>
       <div class="numTip" id="departmentNumTip-act"></div>
     </div>
-    <div class="quick-text1" style="margin-left: 180px" >
-      <label class="title" for="quickemail-act" style="font-weight: 400"><span >*</span>邮箱：</label>
-      <input name="quickemail" id="quickemail-act" type="text"  placeholder="输入您的邮箱"/>
-      <div class="numTip" id="emailNumTip-act" style="margin-left: 60px;"></div>
-    </div>
-    <div class="quick-text1" >
-      <label class="title" for="quickPhoneCode-act" style="font-weight: 400" ><span >*</span>手  机  验  证  码&nbsp;&nbsp;&nbsp;&nbsp;：</label>
+    <div class="quick-text1" style="margin-left: 190px;" >
+      <label class="title" for="quickPhoneCode-act" style="font-weight: 400" ><span >*</span>验证码&nbsp;&nbsp;：</label>
       <input name="quickPhoneCode" id="quickPhoneCode-act" type="text" placeholder="输入手机验证码" style="width: 110px"/>
       <span class="quick-get-phone-code-act" id="phone-activity-booking" style="width: 86px;cursor: pointer;" >获取验证码</span>
-      <div class="numTip" id="codeNumTip-act" style="margin-left: 132px;"></div>
+      <div class="numTip" id="codeNumTip-act" style="margin-left:88px;"></div>
     </div>
-    <div class="quick-btn-box" >
-      <div class="quick-btn" id="booking-btn" style="cursor: pointer; background: #c13232">
+    <div class="quick-text1" style="margin-top: 4px;" >
+      <label class="title" for="quickemail-act" style="font-weight: 400"><span >*</span>邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱&nbsp;&nbsp;&nbsp;&nbsp;：</label>
+      <input name="quickemail" id="quickemail-act" type="text"  placeholder="输入您的邮箱"/>
+      <div class="numTip" id="emailNumTip-act" style="margin-left: 100px;"></div>
+    </div>
+
+    <div class="quick-btn-box" style="width: 224px;margin-top:4px;margin-left: 242px;">
+      <div class="quick-btn" id="booking-btn" style="cursor: pointer; background: #c13232;width: 224px;">
         立即预约
       </div>
     </div>
