--- a/views/about/activity_detail.html
+++ b/views/about/activity_detail.html
@@ -132,8 +132,8 @@
 
   <div class="dui-layout-div"></div>
   <div class="dui-layout-silde">
-    <div style="margin-top: 20px;" class="dui-box-shadow">
-      <div class="common-title" style="border:1px solid #dcdcdc;">
+    <div class="dui-box-shadow">
+      <div class="common-title" style="border:1px solid #dcdcdc;background: #f3f3f3;">
         <i></i>
         <h3>猜你喜欢</h3>
       </div>
@@ -149,10 +149,11 @@
 {{slide.leyu_slide("AD_ACTIVITYDETAIL_SEAT10") }}
 
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js"></script>-->
-<script src="{{helper.cdnhost}}/assets/js/nav_seventh.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/nav_liuxue_search.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/quick_application2.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 
 </body>
