律师团队取消点击效果

--- a/views/about/lawyer.html
+++ b/views/about/lawyer.html
@@ -38,6 +38,9 @@
     text-align: left;
     padding-left: 15px;
   }
+  .lawyer a{
+    cursor: default;
+  }
 </style>
 <body style="background: #ffffff">
 {# 大学排名 #}
