--- a/views/widget/top/top.html
+++ b/views/widget/top/top.html
@@ -280,7 +280,7 @@ input[type="checkbox"] {
 <script src="{{helper.cdnhost}}/assets/js/sha1.js" type="text/javascript" charset="utf-8"></script>
 <script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
 <script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/top.js"></script>
 
 
