--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -116,10 +116,7 @@
         "companyName": "大连",
         "companyId": "13"
         },  {
-        "companyName": "武昌",
-        "companyId": "14"
-        },  {
-        "companyName": "汉口",
+        "companyName": "武汉",
         "companyId": "14"
         },
         {
