--- a/views/widget2/my_comment/my_answer.html
+++ b/views/widget2/my_comment/my_answer.html
@@ -1,6 +1,6 @@
 <div class="cmt-item clearfix">
-    <div class="cmt-img" style="background: none">
-        <img src="{{helper.avaterimg(item.uid, 'small',item.userinfo.status,item.userinfo.version)}}" alt=""/>
+    <div class="cmt-img" style="background: url({{helper.avaterimg(item.uid, 'small', item.user_info.status,item.user_info.version)}})  no-repeat center center;background-size: cover;-webkit-border-radius: 50%;border-radius: 50%;">
+        <!--<img src="{{helper.avaterimg(item.uid, 'small',item.userinfo.status,item.userinfo.version)}}" alt=""/>-->
     </div>
     <div class="cmt-info">
         <div class="cmt-info-txt">
