--- a/views/edit_article_yimin.html
+++ b/views/edit_article_yimin.html
@@ -322,7 +322,7 @@
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
   <script  src="{{helper.cdnhost}}/assets/js/wangEditor.js"></script>
-  <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
+  <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
   <script >
     $(function(){
@@ -366,6 +366,7 @@
       //选择文章类型
       var newsletterType = $("#art-type").attr('data-id');
       var newTagStr = '';
+      var artType = $("#art-type").attr('data-type');
       if(newsletterType ==2){
         newTagStr = '留学时讯';
       }else{
@@ -383,6 +384,7 @@
         }else{
           $('.newsletter-hide').slideUp();
           newTagStr = '移民时讯';
+          artType = 2;
         }
       });
       //选择国家 切换学历
@@ -484,7 +486,6 @@
         layer.msg(info)
       }
       editor.create();
-      var artType = $("#art-type").attr('data-type');
       $('#sureBtn').on('click', function () {
         // 读取 html
         var data = editor.txt.html();
