修改第三方

--- a/views/widget/top/top.html
+++ b/views/widget/top/top.html
@@ -196,7 +196,7 @@ input[type="checkbox"] {
     <div class="l_u_com_fen" id="fx" >
         <img style="margin-right: 76px;" src="{{helper.cdnhost}}/assets/img/weibo_login.png" alt="" id="weibo"/>
 
-        <a target="_blank"  href="{{helper.cdnhost}}/weixin_login?h={{url}}" >
+        <a target="_blank"  href="{{helper.urlgen('weixin_login')}}?h={{url}}" >
           <img src="{{helper.cdnhost}}/assets/img/weixin_login.png" alt=""/>
         </a>
         <img style="margin-left: 76px;" src="{{helper.cdnhost}}/assets/img/QQ_login.png" alt="" id="qq"/>
@@ -236,7 +236,7 @@ input[type="checkbox"] {
     <div class="l_u_com_fen" id="fx" >
         <img style="margin-right: 76px;" src="{{helper.cdnhost}}/assets/img/weibo_login.png" alt="" id="weibo_reg"/>
 
-        <a target="_blank"  href="{{helper.cdnhost}}/weixin_login?h={{url}}" >
+        <a target="_blank"  href="{{helper.urlgen('weixin_login')}}?h={{url}}" >
           <img src="{{helper.cdnhost}}/assets/img/weixin_login.png" alt=""/>
         </a>
         <img style="margin-left: 76px;" src="{{helper.cdnhost}}/assets/img/QQ_login.png" alt="" id="qq_reg"/>
