--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -401,10 +401,12 @@
           var tagStr = '';
           $('.recommend-sel[checked=checked]').each(function(){
             tagStr+=$(this).find('i').eq(1).text()+',';
-            if($(this).find('i').eq(1).text()=='留学案例'){
-              artType =1;
-            }
           });
+          if($('.recommend-sel').eq(6).attr('checked')){
+           artType = 1;
+          }else{
+            artType = 2;
+          }
           if(tagStr == ''){
             layer.msg('请选择推荐标签');
             return false;
@@ -495,10 +497,12 @@
           var tagStr = '';
           $('.recommend-sel[checked=checked]').each(function(){
             tagStr+=$(this).find('i').eq(1).text()+',';
-            if($(this).find('i').eq(1).text()=='留学案例'){
-              artType =1;
-            }
           });
+          if($('.recommend-sel').eq(6).attr('checked')){
+            artType = 1;
+          }else{
+            artType = 2;
+          }
           if(tagStr == ''){
             layer.msg('请选择推荐标签');
             return false;
