--- a/views/edit_case.html
+++ b/views/edit_case.html
@@ -299,7 +299,7 @@
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
   <script  src="{{helper.cdnhost}}/assets/js/wangEditor.js"></script>
   <script  src="{{helper.cdnhost}}/assets/js/zxxFile.js"></script>
-  <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
+  <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
   <script >
     $(function(){
       var city_id =null;
