--- a/views/center_comment.html
+++ b/views/center_comment.html
@@ -139,7 +139,7 @@
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/common/select.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
-<script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
 <script>
     $(function () {
         $('.banner-box-left .slider').xSlider({
