--- a/views/edit_article_yimin.html
+++ b/views/edit_article_yimin.html
@@ -505,10 +505,12 @@
           var tagStr = '';
           $('.recommend-sel[checked=checked]').each(function(){
             tagStr+=$(this).find('i').eq(1).text()+',';
-            if($(this).find('i').eq(1).text()=='移民案例'){
-              artType =1;
-            }
           });
+          if($('.recommend-sel').eq(6).attr('checked')){
+            artType = 1;
+          }else{
+            artType = 2;
+          }
           if(tagStr == ''){
             layer.msg('请选择推荐标签');
             return false;
@@ -598,10 +600,12 @@
           var tagStr = '';
           $('.recommend-sel[checked=checked]').each(function(){
             tagStr+=$(this).find('i').eq(1).text()+',';
-            if($(this).find('i').eq(1).text()=='移民案例'){
-              artType =1;
-            }
           });
+          if($('.recommend-sel').eq(6).attr('checked')){
+            artType = 1;
+          }else{
+            artType = 2;
+          }
           if(tagStr == ''){
             layer.msg('请选择推荐标签');
             return false;
