--- a/views/login/oauth.html
+++ b/views/login/oauth.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/custom.css" rel="stylesheet">
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/layer.css"/>
   {% include "header_new.html" %}
-  <script src="{{helper.cdnhost}}/assets/js/layer.js"></script>
+  <script src="{{helper.cdnhost}}/dep/js/layer.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
   <script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/icheck.min.js"></script>
