--- a/views/login/register.html
+++ b/views/login/register.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/style.css?v=4.1.0" >
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/custom.css">
 
-  <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
+  <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
   <script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/icheck.min.js"></script>
