--- a/views/release_case.html
+++ b/views/release_case.html
@@ -271,7 +271,7 @@
 <script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>
 <script  src="{{helper.cdnhost}}/assets/js/wangEditor.js"></script>
 <script  src="{{helper.cdnhost}}/assets/js/zxxFile.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script >
