--- a/views/user_information.html
+++ b/views/user_information.html
@@ -151,7 +151,7 @@
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
