--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -30,6 +30,7 @@
       {% endif %}
       {% endif %}
     </div>
+    {% if userinfo.usertype == 2 %}
     <div style="margin-top: 20px;" class="dui-box-shadow">
       <div class="common-title" style="border:1px solid #dcdcdc;">
         <i></i>
@@ -41,6 +42,7 @@
         {% esi helper.include(esikey,'fragment/yimin_guess_like','n='+country,'c='+tdk.cityid) %}
       {% endif %}
     </div>
+    {% endif %}
     <div style="margin-top: 20px;" class="dui-box-shadow">
       <div class="common-title" style="border:1px solid #dcdcdc;">
         <i></i>
@@ -68,6 +70,7 @@
         {% endif %}
         {% endif %}
       </div>
+      {% if userinfo.usertype == 2 %}
       {% if guwen_list.list.length > 0 %}
       <div class="right-main clearfix">
         {% for item in guwen_list.list %}
@@ -84,6 +87,9 @@
       </div>
       {% else %}
       {% include "widget2/blank/blank.html" %}
+      {% endif %}
+      {% else %}{# 参赞介绍 #}
+      <h2>参赞介绍：</h2>
       {% endif %}
     </div>
   </div>
