--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -64,27 +64,28 @@
 <!--参赞-->
 {% macro counsellor(advisor,helper,login_info) %}
 <div class="community-advisor dui-box-shadow">
-  <ul>
-    <li class="guanzhu">粉丝<span class="guanzhu-num">{{ advisor.fans_count }}</span></li>
-    <li style="width: 135px">文章<span class="article-num">{{ advisor.article_count }}</span></li>
-  </ul>
+  <!--<ul>-->
+    <!--<li class="guanzhu">粉丝<span class="guanzhu-num">{{ advisor.fans_count }}</span></li>-->
+    <!--<li style="width: 135px">文章<span class="article-num">{{ advisor.article_count }}</span></li>-->
+  <!--</ul>-->
   <dl>
-    <dt class="advisor-img"><a target="_blank" href="{{helper.urlgen(advisor.uid)}}"><img src="{{helper.avaterimg(advisor.uid, 'small', 0,advisor.version)}}" alt="{{advisor.realname}}" title="{{advisor.realname}}"></a></dt>
+    <dt class="advisor-img" style="background-image: url('{{helper.avaterimg(advisor.uid, 'small', 0,advisor.version)}}');background-position: 0 0;"><a target="_blank" href="{{helper.urlgen(advisor.uid)}}"></a></dt>
     <dd>
       <p class="advisor-name">{{ advisor.realname }}</p>
     </dd>
   </dl>
   <p class="advisor-sushu" style="width: 100%;text-align: center">{{ advisor.job_number }}</p>
-  <div class="counsellor-intro">
-    <p>{{ advisor.introduce | ellipsis(80) }}</p>
-  </div>
-  <div class="advisor-btn {% if login_info.uid ==advisor.uid %}advisor-btn-gray{% endif %}">
-    {% if advisor.is_follow %}
-      <span class="counsellor-guanzhu guanzhu-btn" data-uid="{{advisor.uid}}">已关注</span>
-    {% else %}
-      <span class="counsellor-guanzhu guanzhu-btn" data-uid="{{advisor.uid}}">关注</span>
-    {% endif %}  
-  </div>
+  <p class="advisor-sushu" style="width: 100%;text-align: center;padding-bottom: 20px">{{ advisor.job_number }}</p>
+  <!--<div class="counsellor-intro">-->
+    <!--<p>{{ advisor.introduce | ellipsis(80) }}</p>-->
+  <!--</div>-->
+  <!--<div class="advisor-btn {% if login_info.uid ==advisor.uid %}advisor-btn-gray{% endif %}">-->
+    <!--{% if advisor.is_follow %}-->
+      <!--<span class="counsellor-guanzhu guanzhu-btn" data-uid="{{advisor.uid}}">已关注</span>-->
+    <!--{% else %}-->
+      <!--<span class="counsellor-guanzhu guanzhu-btn" data-uid="{{advisor.uid}}">关注</span>-->
+    <!--{% endif %}  -->
+  <!--</div>-->
 </div>
 {% endmacro %}
 
