--- a/views/about/activity_detail.html
+++ b/views/about/activity_detail.html
@@ -137,7 +137,7 @@
         <i></i>
         <h3>猜你喜欢</h3>
       </div>
-      {% esi helper.include(esikey,'fragment/guess_like','c='+tdk.cityid) %}
+      {% esi helper.include(esikey,'fragment/guess_like','n='+country,'c='+tdk.cityid) %}
     </div>
 
   </div>
