--- a/views/widget/online_evaluation/quick_application2.html
+++ b/views/widget/online_evaluation/quick_application2.html
@@ -43,7 +43,7 @@
     <div class="quick-text1" style="margin-left: 190px;" >
       <label class="title" for="quickPhoneCode-act" style="font-weight: 400" ><span >*</span>验证码&nbsp;&nbsp;：</label>
       <input name="quickPhoneCode" id="quickPhoneCode-act" type="text" placeholder="输入手机验证码" style="width: 110px"/>
-      <span class="quick-get-phone-code-act" id="phone-activity-booking" style="width: 86px;cursor: pointer;" >获取验证码</span>
+      <span class="quick-get-phone-code-act" id="phone-activity-booking" style="width: 86px;cursor: pointer;color:#ff7d31;" >获取验证码</span>
       <div class="numTip" id="codeNumTip-act" style="margin-left:88px;"></div>
     </div>
     <div class="quick-text1" style="margin-top: 4px;" >
