搜索顾问的模板

--- a/views/so_article_yimin.html
+++ b/views/so_article_yimin.html
@@ -256,6 +256,7 @@
                 </div>-->
             </div>
             {% endif %}
+     {#     {% include "widget/so_advisor/so_advisor.html" %}  #}
         </div>
         {% if article_list.total == 0 or article_list.total == null %}
         {% else %}
